istio-manifests/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ripley-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ripley
spec:
  hosts:
    - "*"
  gateways:
    - ripley-gateway
  http:
    - match:
        - uri:
            exact: /graphql
      route:
        - destination:
            host: gateway-api
            port:
              number: 4000
    - match:
        - uri:
            exact: /api/v1/auth/signup
      route:
        - destination:
            host: gateway-api
            port:
              number: 4000
    - match:
        - uri:
            exact: /api/v1/auth/login
      route:
        - destination:
            host: gateway-api
            port:
              number: 4000
    - route:
        - destination:
            host: webapp
            port:
              number: 3000
